--- a/App/ClientApp/src/assets/content/site.scss
+++ b/App/ClientApp/src/assets/content/site.scss
@@ -12,6 +12,11 @@
     line-height: 25px;
   }
 
+  .multiselect-dropdown[_ngcontent-ibj-c5] .dropdown-btn[_ngcontent-ibj-c5] .selected-item[_ngcontent-ibj-c5] {
+    border: 1px solid #e2801c !important;
+    background: #e2801c !important;
+  }
+
   td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell:first-of-type {
     padding-left: 10px;
   }
@@ -944,7 +949,7 @@
 
   button:disabled {
     opacity: 0.7;
-    cursor:not-allowed
+    cursor: not-allowed !important
   }
 
   .ngx-pagination li a:focus {
