Side bar title changes

--- a/App/ClientApp/src/app/layout/asset-settings/asset-settings.component.html
+++ b/App/ClientApp/src/app/layout/asset-settings/asset-settings.component.html
@@ -1,6 +1,6 @@
 <div class="main-container">
   <div class="page-title">
-    <span class="xs-title">Asset Settings</span>
+    <span class="xs-title">Configure Assets</span>
   </div>
   <form [formGroup]="imageForm" name="assetForm" autocomplete="on" novalidate>
     <div class="card border-0 mb-2 card-shadow">
