--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -71,7 +71,7 @@
         <a> <span class='nav-icon icon-rp-yield1' title="Analytics"> </span> <span class='nav-title'>Analytics</span> </a>
       </li>
       <li [ngClass]="(URL=='/settings')?'side-bar-li active-li':'side-bar-li'" (click)="navigateToSettings()">
-        <a> <span class='nav-icon icon-rp-yield1' title="Settings"> </span> <span class='nav-title'>Asset Setting</span> </a>
+        <a> <span class='nav-icon icon-rp-yield1' title="Settings"> </span> <span class='nav-title'>Configure Assets</span> </a>
       </li>
 
 
