--- a/App/ClientApp/src/assets/content/theme0.scss
+++ b/App/ClientApp/src/assets/content/theme0.scss
@@ -22,19 +22,43 @@
   $btn-table-color: #949494;
   $gridline-color: #e1e1e1;
   $bg-theme-danger: #ce0a0a;
-  /*
-  .multiselect-dropdown[_ngcontent-ibj-c5] .dropdown-btn[_ngcontent-ibj-c5] .selected-item[_ngcontent-ibj-c5] {
-    border: 1px solid #e2801c !important;
-    background: #e2801c !important;
-  }*/
-  .multiselect-dropdown[_ngcontent-vmy-c5] .dropdown-btn[_ngcontent-vmy-c5] .selected-item[_ngcontent-vmy-c5] {
+
+  .ftr-vrsn {
+    background: #f5f5f5;
+    border-top: solid thin #e1e1e1;
+  }
+
+
+  .multiselect-dropdown .dropdown-btn .selected-item {
     border: 1px solid $color-theme !important;
-    margin-right: 4px;
     background: $color-theme !important;
-    padding: 0 5px;
-    color: #fff;
-    border-radius: 2px;
-    float: left;
+  }
+
+  .multiselect-item-checkbox input[type=checkbox]:checked + div:before {
+    background: $color-theme !important;
+    color: $color-theme !important;
+    border: 2px solid $color-theme !important;
+  }
+
+  .multiselect-item-checkbox input[type=checkbox] + div:before {
+    color: $color-theme !important;
+    border: 2px solid $color-theme !important;
+  }
+
+  .multiselect-dropdown .dropdown-btn .dropdown-down {
+    border-top: 6px solid #adadad !important;
+    border-left: 6px solid transparent !important;
+    border-right: 6px solid transparent !important;
+  }
+
+  .multiselect-dropdown .dropdown-btn .dropdown-up {
+    border-bottom: 6px solid #adadad !important;
+    border-left: 6px solid transparent !important;
+    border-right: 6px solid transparent !important;
+  }
+
+  .multiselect-dropdown .dropdown-btn:focus {
+    outline: none !important;
   }
 
   .widget-header-title {
