Side bar changes

--- a/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/add-asset-library/add-asset-library.component.html
@@ -4,7 +4,7 @@
     <span class="xs-title" *ngIf="updateOperationMode == true"> Update Asset Library  </span>
   </div>
   <!--delete this button-->
-  <button type="button" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye" id="btnViewImage"></span></button>
+  <!--<button type="button" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye" id="btnViewImage"></span></button>-->
   <div class="modal fade cust-modal bd-example-modal-lg" id="resourcePreview" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
