role and page module related bugs resolved

--- a/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
+++ b/App/ClientApp/src/app/dashboard-designer/add-dashboard-designer/add-dashboard-designer.component.html
@@ -168,7 +168,7 @@
             <label> Embedded </label>
             <div>
               <label class="switch d-block">
-                <input type="checkbox" (change)="isEmbedded=!isEmbedded">
+                <input type="checkbox" (change)="isEmbedded=!isEmbedded" [checked]="isEmbedded"> 
                 <span class="slider round"></span>
               </label>
             </div>
