--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -25,7 +25,7 @@
   </ul>
   <ul class='nav nav-toolbar float-right'>
     <li>
-      <a class="nav-link top-nav-link" id="settingsSideBar" (click)="ChangeSideBar()">
+      <a class="nav-link top-nav-link" id="settingsSideBar" title="Asset Configuration Settings" (click)="ChangeSideBar()">
         <span></span>
         <i class="fa fa-cog"></i>
       </a>
