--- a/App/ClientApp/src/app/layout/template/list/list.component.html
+++ b/App/ClientApp/src/app/layout/template/list/list.component.html
@@ -64,7 +64,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="actions">
-          <th class="width18 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+          <th class="width18 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
           <td mat-cell *matCellDef="let element">
             <div class="action-btns btn-tbl-action">
               <button type="button" title="View" id="btnView" (click)="navigationTodashboardDesigner(element)"><span class="fa fa-file-text-o"></span></button>
@@ -130,24 +130,29 @@
         <div class="form-group">
           <label>Start Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate" placeholder="Please select start date" readonly>
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate" 
+              placeholder="Please select start date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
             <span [owlDateTimeTrigger]="dt" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
             <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
           </div>
-          <div class="text-danger" *ngIf="filterDateError">
-            Start date should not be greater than End date.
+          <div class="text-danger" *ngIf="filterFromDateError">
+            {{filterFromDateErrorMessage}}
           </div>
         </div>
         <div class="form-group">
           <label>End Date</label>
           <div class="position-relative">
-            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate" placeholder="Please select end date" readonly>
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate" 
+              placeholder="Please select end date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
             <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
               <i class="fa fa-calendar"></i>
             </span>
             <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterToDateError">
+            {{filterToDateErrorMessage}}
           </div>
         </div>
       </div>
