--- a/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/list/list.component.html
@@ -5,8 +5,9 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" id="btnAddUsers" routerLink="Add">
-        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Schedule
+      <button class="btn-add btn-cust" id="btnAddUsers" (click)="navigateToScheduleAdd()"
+              *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Schedule Management',Operation: 'Create' }))">
+        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Asset Schedule
       </button>
 
     </div>
@@ -17,118 +18,136 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="name">
-          <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let element">{{element.name}}</td>
-        </ng-container>
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element">{{element.Name}}</td>
+          </ng-container>
 
-        <!-- Name Column -->
-        <ng-container matColumnDef="template">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Defination </th>
-          <td mat-cell *matCellDef="let element"> {{element.template}} </td>
-        </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="schedule">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Defination </th>
+            <td mat-cell *matCellDef="let element"> {{element.StatementDefinition.Name}} </td>
+          </ng-container>
 
-        <!-- Weight Column -->
-        <ng-container matColumnDef="startDate">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.startDate}} </td>
-        </ng-container>
+          <!-- Weight Column -->
+          <ng-container matColumnDef="startDate">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Start Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.StartDate}} </td>
+          </ng-container>
 
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="endDate">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
-          <td mat-cell *matCellDef="let element"> {{element.endDate}} </td>
-        </ng-container>
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="endDate">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> End Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.EndDate}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="DayOfMonth">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
-          <td mat-cell *matCellDef="let element"> {{element.DayOfMonth}} </td>
-        </ng-container>
+          <ng-container matColumnDef="DayOfMonth">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Day of Month </th>
+            <td mat-cell *matCellDef="let element"> {{element.DayOfMonth}} </td>
+          </ng-container>
 
-        <ng-container matColumnDef="actions">
-          <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="action-btns btn-tbl-action">
-              <button type="button" title="View" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
-              <button type="button" title="Update" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
-              <button type="button" title="Delete" id="btnDelete"><span class="fa fa-trash-o"></span></button>
-              <button type="button" title="History" id="btnDelete" routerLink="History"><span class="fa fa-history"></span></button>
-              <button type="button" title="Activate"><span class="fa fa-toggle-on"></span></button>
-            </div>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="actions">
+            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <td mat-cell *matCellDef="let element">
+              <div class="action-btns btn-tbl-action">
+                <button type="button" id="btnViewRole" title="View Asset Library" (click)="navigateToScheduleView(element)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'View' }))">
+                  <span class="fa fa-file-text-o"></span>
+                </button>
+                <button type="button" id="btnUpdateRole" title="Update Asset Library" (click)="navigateToScheduleEdit(element)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">
+                  <span class="fa fa-pencil-square-o"></span>
+                </button>
+                <button type="button" id="btnDeleteRole" (click)="deleteSchedule(element)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))">
+                  <span class="fa fa-trash-o"></span>
+                </button>
+                <button type="button" title="History" id="btnDelete" routerLink="History"><span class="fa fa-history"></span></button>
+                <button type="button" title="Activate"><span class="fa fa-toggle-on"></span></button>
+              </div>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-        </div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
     </div>
   </div>
   <!--desktop view end-->
-
-  <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
-    <div class="filter-head">
-      <label class="m-0">Apply Filter</label>
-    </div>
-    <div class="filter-body-left d-flex flex-column stylescrollbar">
-      <div class="form-group">
-        <label>Name</label>
-        <input type="text" class="form-control">
+  <form [formGroup]="ScheduleFilterForm">
+    <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
+      <div class="filter-head">
+        <label class="m-0">Apply Filter</label>
       </div>
-      <div class="form-group">
-        <label>Statement Defination</label>
-        <input type="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label>Start Date</label>
-        <div class="position-relative">
-          <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filtershiftfromdate">
-          <span [owlDateTimeTrigger]="dt" class="datetime-icon">
-            <i class="fa fa-calendar"></i>
-          </span>
-          <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+      <div class="filter-body-left d-flex flex-column stylescrollbar">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" formControlName="filterDisplayName">
+        </div>
+        <div class="form-group">
+          <label>Statement Defination</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="form-group">
+          <label>Start Date</label>
+          <div class="position-relative">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterStartDate"
+                   placeholder="Please select start date" readonly (ngModelChange)="onFilterDateChange($event)">
+            <span [owlDateTimeTrigger]="dt" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterFromDateError">
+            {{filterFromDateErrorMessage}}
+          </div>
+        </div>
+        <div class="form-group">
+          <label>End Date</label>
+          <div class="position-relative">
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterEndDate"
+                   placeholder="Please select end date" readonly (ngModelChange)="onFilterDateChange($event)">
+            <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterToDateError">
+            {{filterToDateErrorMessage}}
+          </div>
         </div>
       </div>
-      <div class="form-group">
-        <label>End Date</label>
-        <div class="position-relative">
-          <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filtershiftenddate">
-          <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
-            <i class="fa fa-calendar"></i>
-          </span>
-          <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
-        </div>
+      <!--[ngClass]="filterClass"-->
+      <div class="filter-footer">
+        <ul class="nav">
+          <li class="nav-item width33" title="Search">
+            <a class="nav-link p-0">
+              <span class="fa fa-check"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" title="Reset">
+            <a class="nav-link p-0">
+              <span class="fa fa-refresh"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" title="Close" (click)="closeFilter()">
+            <a class="nav-link p-0">
+              <span class="fa fa-close"></span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-    <!--[ngClass]="filterClass"-->
-    <div class="filter-footer">
-      <ul class="nav">
-        <li class="nav-item width33" title="Search">
-          <a class="nav-link p-0">
-            <span class="fa fa-check"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Reset">
-          <a class="nav-link p-0">
-            <span class="fa fa-refresh"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Close" (click)="closeFilter()">
-          <a class="nav-link p-0">
-            <span class="fa fa-close"></span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+    </form>
 </div>
 
 <div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
