--- a/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
+++ b/App/ClientApp/src/app/layout/asset-libraries/list-asset-library/list-asset-library.component.html
@@ -38,15 +38,15 @@
             <th class="width12 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button type="button" id="btnViewRole" title="View Asset Library" (click)="navigateToAssetLibraryView(element)"
+                <button type="button" id="btnViewRole" title="View" (click)="navigateToAssetLibraryView(element)"
                         *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'View' }))">
                   <span class="fa fa-file-text-o"></span>
                 </button>
-                <button type="button" id="btnUpdateRole" title="Update Asset Library" (click)="navigateToAssetLibraryEdit(element)"
+                <button type="button" id="btnUpdateRole" title="Update" (click)="navigateToAssetLibraryEdit(element)"
                         *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Edit' }))">
                   <span class="fa fa-pencil-square-o"></span>
                 </button>
-                <button type="button" id="btnDeleteRole" (click)="deleteAssetLibrary(element)"
+                <button type="button" id="btnDeleteRole"title="Delete"  (click)="deleteAssetLibrary(element)"
                         *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Asset Library',Operation: 'Delete' }))">
                   <span class="fa fa-trash-o"></span>
                 </button>
