--- a/App/ClientApp/src/app/layout/widgets/add/add.component.html
+++ b/App/ClientApp/src/app/layout/widgets/add/add.component.html
@@ -2,26 +2,21 @@
   <div class="page-title d-flex justify-content-between">
     <span class="xs-title">Available Widgets</span>
 
-    <select formControlName="pageType" (change)='onPageTypeSelected($event)'class="form-control width20 mt-2 xs-w-100">
+    <select formControlName="pageType" (change)='onPageTypeSelected($event)' class="form-control width20 mt-2 xs-w-100">
       <option *ngFor="let type of pageTypeList" [value]="type.Identifier">{{type.Name}}</option>
     </select>
-    <!--<select class="form-control width20 mt-2 xs-w-100">
-      <option selected>Select Page Type</option>
-      <option>Home</option>
-      <option>Saving Account</option>
-      <option>Current Account</option>
-    </select>-->
+
   </div>
   <div class="card border-0 mb-2 card-shadow">
     <div class="card-body position-relative">
       <div class="row">
         <div class="col-sm-7">
-         
+
           <div *ngFor="let widget of widgetList">
             <div class="widget-card">
               <div class="hide-radio widget-icons">
                 <label>
-                  <input type="radio" name="widgetType" id="inputWidgetImage" (click)="setWidgetType(widget)">
+                  <input type="radio" name="widgetType" id="inputWidgetImage" (click)="setWidgetType(widget)"  [checked]="widget.Checked">
                   <span class="{{widget.WidgetIcon}}"></span>
                 </label>
               </div>
@@ -35,78 +30,13 @@
             <div class="col-sm-12">
               <div class="mb-3">
                 <h6 class="mb-1">{{selectedLink.DisplayName}}</h6>
-                <!--<h6 class="mb-1" *ngIf="isSelected('AccountInformation')">Account Information </h6>
-                <h6 class="mb-1" *ngIf="isSelected('Summary')">Summary at Glance </h6>
-                <h6 class="mb-1" *ngIf="isSelected('Image')">Image </h6>
-                <h6 class="mb-1" *ngIf="isSelected('Video')">Video</h6>
-                <h6 class="mb-1" *ngIf="isSelected('Analytics')">Analytics </h6>
-                <h6 class="mb-1" *ngIf="isSelected('AvailableBalance')">Available Balance </h6>
-                <h6 class="mb-1" *ngIf="isSelected('Top4Income')">Top 4 Income Sources </h6>
-                <h6 class="mb-1" *ngIf="isSelected('TransactionList')">Transaction List </h6>
-                <h6 class="mb-1" *ngIf="isSelected('SavingTrend')"> Saving Trend </h6>
-                <h6 class="mb-1" *ngIf="isSelected('SpendingTrend')"> Spending Trend </h6>
-                <h6 class="mb-1" *ngIf="isSelected('NewsAlerts')">News Alerts </h6>
-                <h6 class="mb-1" *ngIf="isSelected('InvestmentPortfolioRisk')">Investment Portfolio Risk </h6>
-                <h6 class="mb-1" *ngIf="isSelected('TransactionDetails')">Transaction Details </h6>
-                <h6 class="mb-1" *ngIf="isSelected('ReminderandRecommendation')">Reminder & Recommendation </h6>
-                <h6 class="mb-1" *ngIf="isSelected('TransactionMix')">Transaction Mix </h6>-->
 
                 <div><label class="mb-0">Decrtiption : </label><span class="ml-1">{{selectedLink.WidgetDescription}}</span></div>
                 <div><label class="mb-0">Page Types :</label> <h6 class="badge badge-secondary p-1 ml-1 mb-0">{{selectedLink.PageTypeNames}}</h6></div>
               </div>
               <div class="card card-shadow preview-container float-right width100" style="position:initial;right:0;">
                 <div class="card-body d-flex justify-content-center align-items-center">
-
-                  <img src="{{selectedLink.ImageSource}}" class="img-fluid" id="imgWidget"/>
-
-                  <!--<img src="assets/images/CustomerInfoWidget.PNG" class="img-fluid" id="imgWidgetCustomerInformation"
-                       *ngIf="isSelected('CustomerInformation')" />
-
-                  <img src="assets/images/AccountInfoWidget.PNG" class="img-fluid" id="imgWidgetAccountInformation"
-                       *ngIf="isSelected('AccountInformation')" />
-
-                  <img src="assets/images/SummaryWidget.PNG" class="img-fluid" id="imgWidgetSummary"
-                       *ngIf="isSelected('Summary')" />
-
-                  <img src="assets/images/ReminderWidget.PNG" class="img-fluid" id="imgWidgetReminderandRecommendation"
-                       *ngIf="isSelected('ReminderandRecommendation')" />
-
-                  <img src="assets/images/ImageWidget.PNG" class="img-fluid" id="imgWidgetImage"
-                       *ngIf="isSelected('Image')" />
-
-                  <img src="assets/images/VideoWidget.PNG" class="img-fluid" id="imgWidgetVideo"
-                       *ngIf="isSelected('Video')" />
-
-                  <img src="assets/images/Analytics.png" class="img-fluid" id="imgWidgetAnalytics"
-                       *ngIf="isSelected('Analytics')" />
-
-                  <img src="assets/images/AvailableBalanceWidget.PNG" class="img-fluid" id="imgWidgetAvailableBalance"
-                       *ngIf="isSelected('AvailableBalance')" />
-
-                  <img src="assets/images/Top4IncomeWidget.PNG" class="img-fluid" id="imgWidgetTop4Income"
-                       *ngIf="isSelected('Top4Income')" />
-
-                  <img src="assets/images/TranscationListWidget.PNG" class="img-fluid" id="imgWidgetTransactionList"
-                       *ngIf="isSelected('TransactionList')" />
-
-                  <img src="assets/images/SavingTrendWidget.PNG" class="img-fluid" id="imgWidgetSavingTrend"
-                       *ngIf="isSelected('SavingTrend')" />
-
-                  <img src="assets/images/TransactionMixWidget.PNG" class="img-fluid" id="imgWidgetTransactionMix"
-                       *ngIf="isSelected('TransactionMix')" />
-
-                  <img src="assets/images/SpendingTrendWidget.PNG" class="img-fluid" id="imgWidgetSpendingTrend"
-                       *ngIf="isSelected('SpendingTrend')" />
-
-                  <img src="assets/images/NewsAlertsWidget.PNG" class="img-fluid" id="imgWidgetNewsAlerts"
-                       *ngIf="isSelected('NewsAlerts')" />
-
-                  <img src="assets/images/InvestmentPortfolioWidget.PNG" class="img-fluid" id="imgWidgetInvestmentPortfolioRisk"
-                       *ngIf="isSelected('InvestmentPortfolioRisk')" />
-
-                  <img src="assets/images/TranscationDetailsWidget.PNG" class="img-fluid" id="imgWidgetTransactionDetails"
-                       *ngIf="isSelected('TransactionDetails')" />-->
-
+                  <img src="{{selectedLink.ImageSource}}" class="img-fluid" id="imgWidget" />
                 </div>
               </div>
             </div>
@@ -114,18 +44,7 @@
 
         </div>
       </div>
-
-      <!------------------------------------------------------------------------------------------------>
-      <!------------------------------------------------------------------------------------------------>
-
-
-
     </div>
   </div>
-  <!--<div class="card border-0 mt-4 mb-3 bg-transparent">
-    <div class="card-body p-0">
-      <button class="btn-footer-fill mr-2" id="btnSave">Save</button>
-      <button class="btn-footer-outline" id="btnCancel" (click)="navigateToListPage()">Cancel</button>
-    </div>
-  </div>-->
+
 </div>
