--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -5,8 +5,9 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
-      <button class="btn-add btn-cust" id="btnAddUsers" routerLink="Add">
-        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Statement Defination
+      <button class="btn-add btn-cust" id="btnAddUsers" (click)="navigateToStatementAdd()"
+              *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'Create' }))">
+        <span class="fa fa-plus btn-icon-cust btn-icon-fill"></span> Statement Definition
       </button>
 
     </div>
@@ -17,12 +18,12 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage"  (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust">
+      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
         <!-- Position Column -->
         <ng-container matColumnDef="name">
           <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
@@ -53,10 +54,19 @@
           <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
           <td mat-cell *matCellDef="let element">
             <div class="action-btns btn-tbl-action">
-              <button type="button" title="View" id="btnView" routerLink="View"><span class="fa fa-file-text-o"></span></button>
-              <button type="button" title="Update" id="btnUpdate"><span class="fa fa-pencil-square-o"></span></button>
-              <button type="button" title="Delete" id="btnDelete"><span class="fa fa-trash-o"></span></button>
-              <button type="button" title="Publish" id="btnDelete"><span class="fa fa-share"></span></button>
+              <button type="button" id="btnViewRole" title="View" (click)="navigateToStatementView(element)"
+                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'View' }))">
+                <span class="fa fa-file-text-o"></span>
+              </button>
+              <button type="button" id="btnUpdateRole" title="Update"  (click)="navigateToStatementEdit(element)"
+                      *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'Edit' }))">
+                <span class="fa fa-pencil-square-o"></span>
+              </button>
+              <button type="button" id="btnDeleteRole" title="Delete" (click)="deleteStatement(element)"
+                      *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'Delete' }))">
+                <span class="fa fa-trash-o"></span>
+              </button>
+              <button type="button" title="Publish" *ngIf="element.Status!='Published'" (click)="PublishStatement(element)" id="btnDelete"><span class="fa fa-share"></span></button>
               <button type="button" title="Preview" id="btnDelete" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye"></span></button>
             </div>
           </td>
