--- a/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
+++ b/App/ClientApp/src/app/shared/modules/sidebar/sidebar.component.html
@@ -9,6 +9,12 @@
   </div>
 
   <ul class='nav nav-toolbar float-right' [ngClass]="isTopbarShow? 'show':'hide'">
+    <li class="nav-item">
+      <a class="nav-link top-nav-link" id="settingsSideBar" title="Asset Configuration Settings" (click)="ChangeSideBar()">
+        <span></span>
+        <i class="fa fa-cog"></i>
+      </a>
+    </li>
     <li class="nav-item dropdown float-right">
       <a class="nav-link top-nav-link" id="dropdownMenuButton" data-toggle="dropdown">
         <span class="user-name-nav">{{loggedInUserName}}</span>
@@ -23,16 +29,15 @@
     </li>
 
   </ul>
-  <ul class='nav nav-toolbar float-right'>
-    <li>
-      <a class="nav-link top-nav-link" id="settingsSideBar" title="Asset Configuration Settings" (click)="ChangeSideBar()">
-        <span></span>
-        <i class="fa fa-cog"></i>
-      </a>
-    </li>
-  </ul>
+
   <!--mobile end-->
   <ul class='nav nav-toolbar float-right show-toolbar'>
+    <li class="nav-item">
+      <a class="nav-link top-nav-link" id="settingsSideBar" title="Asset Configuration Settings" (click)="ChangeSideBar()">
+        <span></span>
+        <i id ="HomeSettingIcon"class="fa fa-cog"></i>
+      </a>
+    </li>
     <li class="nav-item dropdown">
       <a class="nav-link top-nav-link" id="dropdownMenuButton" data-toggle="dropdown">
         <span class="user-name-nav">{{loggedInUserName}}</span>
@@ -80,12 +85,12 @@
       <li [ngClass]="(URL=='/analytics')?'side-bar-li active-li':'side-bar-li'" *ngIf="IsMainMenu" (click)="navigateToAnalytics()">
         <a> <span class='nav-icon icon-rp-yield1' title="Analytics"> </span> <span class='nav-title'>Analytics</span> </a>
       </li>
-      <li [ngClass]="(URL=='/settings')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu"(click)="navigateToSettings()">
+      <li [ngClass]="(URL=='/settings')?'side-bar-li active-li':'side-bar-li'" *ngIf="!IsMainMenu" (click)="navigateToSettings()">
         <!--<a> <span class='nav-icon icon-rp-yield1' title="Settings"> </span> <span class='nav-title'>Configure Assets</span> </a>-->
         <a> <span class='nav-icon icon-operations2' title="Settings"> </span> <span class='nav-title'>Configure Assets</span> </a>
       </li>
     </ul>
-    
+
   </div>
 </div>
 <div class="content-wapper" [ngClass]="collapse_class">
