--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -18,64 +18,64 @@
       <div class="d-flex justify-content-center mb-4">
         <div class="pagination-mat position-relative">
           <mat-paginator #paginator [pageSize]="pageSize" [pageSizeOptions]="[5, 10, 20]"
-                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage"  (page)="handlePage($event)">
+                         [showFirstLastButtons]="true" [length]="totalSize" [pageIndex]="currentPage" (page)="handlePage($event)">
           </mat-paginator>
         </div>
       </div>
       <div class="widget-area-grid padding-0">
-      <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
-        <!-- Position Column -->
-        <ng-container matColumnDef="name">
-          <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-          <td mat-cell *matCellDef="let element">{{element.name}}</td>
-        </ng-container>
+        <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
+          <!-- Position Column -->
+          <ng-container matColumnDef="name">
+            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let element">{{element.Name}}</td>
+          </ng-container>
 
-        <ng-container matColumnDef="version">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
-          <td mat-cell *matCellDef="let element">{{element.version}} </td>
-        </ng-container>
-        <ng-container matColumnDef="owner">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
-          <td mat-cell *matCellDef="let element">{{element.owner}} </td>
-        </ng-container>
-        <ng-container matColumnDef="date">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
-          <td mat-cell *matCellDef="let element">{{element.date}} </td>
-        </ng-container>
-        <ng-container matColumnDef="status">
-          <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-          <td mat-cell *matCellDef="let element">
-            <span class="badge badge-primary p-1" *ngIf="element.status=='New'">{{element.status}}</span>
-            <span class="badge badge-success p-1" *ngIf="element.status=='Published'">{{element.status}}</span>
-            <span class="badge badge-warning p-1 text-white" *ngIf="element.status=='In Process'">{{element.status}}</span>
-          </td>
-        </ng-container>
-        <ng-container matColumnDef="actions">
-          <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
-          <td mat-cell *matCellDef="let element">
-            <div class="action-btns btn-tbl-action">
-              <button type="button" id="btnViewRole" title="View" (click)="navigateToStatementView(element)"
-                      *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'View' }))">
-                <span class="fa fa-file-text-o"></span>
-              </button>
-              <button type="button" id="btnUpdateRole" title="Update"  (click)="navigateToStatementEdit(element)"
-                      *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'Edit' }))">
-                <span class="fa fa-pencil-square-o"></span>
-              </button>
-              <button type="button" id="btnDeleteRole" title="Delete" (click)="deleteStatement(element)"
-                      *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'Delete' }))">
-                <span class="fa fa-trash-o"></span>
-              </button>
-              <button type="button" title="Publish" *ngIf="element.Status!='Published'" (click)="PublishStatement(element)" id="btnDelete"><span class="fa fa-share"></span></button>
-              <button type="button" title="Preview" id="btnDelete" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye"></span></button>
-            </div>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="version">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
+            <td mat-cell *matCellDef="let element">{{element.Version}} </td>
+          </ng-container>
+          <ng-container matColumnDef="owner">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
+            <td mat-cell *matCellDef="let element">{{element.StatementOwnerName}} </td>
+          </ng-container>
+          <ng-container matColumnDef="date">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
+            <td mat-cell *matCellDef="let element">{{element.PublishedOn  | date:"dd/MM/yyyy h:mm a"}} </td>
+          </ng-container>
+          <ng-container matColumnDef="status">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element">
+              <span class="badge badge-primary p-1" *ngIf="element.Status=='New'">{{element.Status}}</span>
+              <span class="badge badge-success p-1" *ngIf="element.Status=='Published'">{{element.Status}}</span>
+              <span class="badge badge-warning p-1 text-white" *ngIf="element.Status=='In Process'">{{element.Status}}</span>
+            </td>
+          </ng-container>
+          <ng-container matColumnDef="actions">
+            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <td mat-cell *matCellDef="let element">
+              <div class="action-btns btn-tbl-action">
+                <button type="button" id="btnViewRole" title="View" (click)="navigateToStatementView(element)"
+                        *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'View' }))">
+                  <span class="fa fa-file-text-o"></span>
+                </button>
+                <button type="button" id="btnUpdateRole" title="Update" (click)="navigateToStatementEdit(element)"
+                        *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'Edit' }))">
+                  <span class="fa fa-pencil-square-o"></span>
+                </button>
+                <button type="button" id="btnDeleteRole" title="Delete" (click)="deleteStatement(element)"
+                        *ngIf="element.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Statement Definitions',Operation: 'Delete' }))">
+                  <span class="fa fa-trash-o"></span>
+                </button>
+                <button type="button" title="Publish" *ngIf="element.Status!='Published'" (click)="PublishStatement(element)" id="btnDelete"><span class="fa fa-share"></span></button>
+                <button type="button" title="Preview" id="btnDelete" data-toggle="modal" data-target="#resourcePreview"><span class="fa fa-eye"></span></button>
+              </div>
+            </td>
+          </ng-container>
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-        </div>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      </div>
     </div>
   </div>
   <!--desktop view end-->
@@ -92,70 +92,78 @@
       </div>
     </div>
   </div>
-  <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
-    <div class="filter-head">
-      <label class="m-0">Apply Filter</label>
-    </div>
-    <div class="filter-body-left d-flex flex-column stylescrollbar">
-      <div class="form-group">
-        <label>Name</label>
-        <input type="text" class="form-control">
+  <form [formGroup]="StatementFilterForm">
+    <div class="filter-popup" [ngClass]="!isFilter? 'filter-popup':'filter-popup-show'">
+      <div class="filter-head">
+        <label class="m-0">Apply Filter</label>
       </div>
-      <div class="form-group">
-        <label>Owner</label>
-        <input type="text" class="form-control">
-      </div>
-      <div class="form-group">
-        <label>Status</label>
-        <select class="form-control">
-          <option selected> Select</option>
-          <option>New</option>
-          <option>In Process</option>
-          <option>Published</option>
-        </select>
-      </div>
-      <div class="form-group">
-        <label>Start Date</label>
-        <div class="position-relative">
-          <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filtershiftfromdate">
-          <span [owlDateTimeTrigger]="dt" class="datetime-icon">
-            <i class="fa fa-calendar"></i>
-          </span>
-          <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+      <div class="filter-body-left d-flex flex-column stylescrollbar">
+        <div class="form-group">
+          <label>Name</label>
+          <input type="text" class="form-control" id="filterDisplayName" formControlName="filterDisplayName">
+        </div>
+        <div class="form-group">
+          <label>Owner</label>
+          <input type="text" class="form-control" id="filterOwner" formControlName="filterOwner">
+        </div>
+        <div class="form-group">
+          <label>Status</label>
+          <select class="form-control" formControlName="filterStatus" id="filterStatus">
+            <option value="0" selected> Select Status</option>
+            <option value="New">New</option>
+            <option value="Published">Published</option>
+          </select>
+        </div>
+        <div class="form-group">
+          <label>Start Date</label>
+          <div class="position-relative">
+            <input [owlDateTime]="dt" class="form-control" id="inputFromDate" formControlName="filterPublishedOnFromDate"
+                   placeholder="Please select start date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
+            <span [owlDateTimeTrigger]="dt" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterFromDateError">
+            {{filterFromDateErrorMessage}}
+          </div>
+        </div>
+        <div class="form-group">
+          <div class="position-relative">
+            <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filterPublishedOnToDate"
+                   placeholder="Please select end date" readonly (ngModelChange)="onPublishedFilterDateChange($event)">
+            <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
+              <i class="fa fa-calendar"></i>
+            </span>
+            <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
+          </div>
+          <div class="text-danger" *ngIf="filterToDateError">
+            {{filterToDateErrorMessage}}
+          </div>
         </div>
       </div>
-      <div class="form-group">
-        <label>End Date</label>
-        <div class="position-relative">
-          <input [owlDateTime]="dt1" class="form-control" id="inputToDate" formControlName="filtershiftenddate">
-          <span [owlDateTimeTrigger]="dt1" class="datetime-icon">
-            <i class="fa fa-calendar"></i>
-          </span>
-          <owl-date-time #dt1 [pickerType]="'calendar'"></owl-date-time>
-        </div>
+      <!--[ngClass]="filterClass"-->
+      <div class="filter-footer">
+        <ul class="nav">
+          <li class="nav-item width33" title="Search" (click)="searchStatementRecordFilter('search')">
+            <a class="nav-link p-0"  >
+              <span class="fa fa-check"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" title="Reset" (click)="searchStatementRecordFilter('reset')">
+            <a class="nav-link p-0">
+              <span class="fa fa-refresh"></span>
+            </a>
+          </li>
+          <li class="nav-item width33" title="Close" (click)="closeFilter()">
+            <a class="nav-link p-0">
+              <span class="fa fa-close"></span>
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-    <!--[ngClass]="filterClass"-->
-    <div class="filter-footer">
-      <ul class="nav">
-        <li class="nav-item width33" title="Search">
-          <a class="nav-link p-0">
-            <span class="fa fa-check"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Reset">
-          <a class="nav-link p-0">
-            <span class="fa fa-refresh"></span>
-          </a>
-        </li>
-        <li class="nav-item width33" title="Close" (click)="closeFilter()">
-          <a class="nav-link p-0">
-            <span class="fa fa-close"></span>
-          </a>
-        </li>
-      </ul>
-    </div>
-  </div>
+  </form>
 </div>
 
 <div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
