--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -29,18 +29,24 @@
             <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element">{{element.Name}}</td>
           </ng-container>
-
-          <ng-container matColumnDef="version">
-            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Version </th>
-            <td mat-cell *matCellDef="let element">{{element.Version}} </td>
-          </ng-container>
           <ng-container matColumnDef="owner">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
             <td mat-cell *matCellDef="let element">{{element.StatementOwnerName}} </td>
           </ng-container>
+          <ng-container matColumnDef="version">
+            <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf="element.Status=='Published'">{{element.StatementPublishedByUserName}}</span>
+              <span *ngIf="element.Status=='New'">-</span>
+            </td>
+          </ng-container>
           <ng-container matColumnDef="date">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published Date </th>
-            <td mat-cell *matCellDef="let element">{{element.PublishedOn  | date:"dd/MM/yyyy h:mm a"}} </td>
+            <td mat-cell *matCellDef="let element">
+              <span *ngIf="element.Status=='Published'">{{element.PublishedOn | date:"dd/MM/yyyy h:mm a"}}</span>
+              <span *ngIf="element.Status=='New'">-</span>
+
+            </td>
           </ng-container>
           <ng-container matColumnDef="status">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
@@ -146,7 +152,7 @@
       <div class="filter-footer">
         <ul class="nav">
           <li class="nav-item width33" title="Search" (click)="searchStatementRecordFilter('search')">
-            <a class="nav-link p-0"  >
+            <a class="nav-link p-0">
               <span class="fa fa-check"></span>
             </a>
           </li>
