--- a/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
+++ b/App/ClientApp/src/app/layout/statement-defination/list/list.component.html
@@ -33,7 +33,7 @@
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Owner </th>
             <td mat-cell *matCellDef="let element">{{element.StatementOwnerName}} </td>
           </ng-container>
-          <ng-container matColumnDef="version">
+          <ng-container matColumnDef="publishedBy">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Published By </th>
             <td mat-cell *matCellDef="let element">
               <span *ngIf="element.Status=='Published'">{{element.StatementPublishedByUserName}}</span>
@@ -57,7 +57,7 @@
             </td>
           </ng-container>
           <ng-container matColumnDef="actions">
-            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef mat-sort-header> Actions </th>
+            <th class="width20 ip-w-25" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
                 <button type="button" id="btnViewRole" title="View" (click)="navigateToStatementView(element)"
